[package]
name = "research"
version = "0.1.0"
edition = "2021"
description = "Shared research infrastructure: Semantic Scholar client, DeepSeek + Qwen dual-model agent framework, and paper search tools"

[features]
default = ["local-vector"]
local-vector = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:lancedb",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:arrow",
    "dep:regex",
    "dep:sha2",
    "dep:hex",
    "dep:clap",
]
neon = ["dep:sqlx"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
async-trait = { workspace = true }
reqwest    = { workspace = true }
dotenvy    = { workspace = true }
tracing-subscriber = { version = "0.3" }
walkdir    = { workspace = true }
ast-grep-core = "0.41"
ast-grep-language = "0.41"
sdd      = { workspace = true }
deepseek = { workspace = true, features = ["agent"] }
qwen     = { workspace = true }

# arXiv Atom feed parsing (always compiled)
quick-xml = "0.37"
futures   = { workspace = true }
chrono    = { version = "0.4" }

# Local vector pipeline (feature-gated)
candle-core         = { workspace = true, optional = true }
candle-nn           = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub     = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
lancedb    = { workspace = true, optional = true }
arrow-array  = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
arrow      = { version = "57", optional = true }
regex      = { workspace = true, optional = true }
sha2       = { version = "0.10", optional = true }
hex        = { version = "0.4", optional = true }
clap       = { workspace = true, optional = true }

# Neon PostgreSQL (feature-gated)
sqlx = { workspace = true, features = ["uuid", "chrono", "json"], optional = true }

[dev-dependencies]
tempfile    = "3"
serial_test = "3"
wiremock    = "0.6"

[[bin]]
name = "healthcare-research"
path = "src/bin/healthcare_research.rs"

[[bin]]
name = "code-research"
path = "src/bin/code_research.rs"

[[bin]]
name = "law-research"
path = "src/bin/law_research.rs"

[[bin]]
name = "interview-prep"
path = "src/bin/interview_prep.rs"

[[bin]]
name = "condition-research"
path = "src/bin/condition_research.rs"

[[bin]]
name = "tts-research"
path = "src/bin/tts_research.rs"

[[bin]]
name = "therapeutic-research"
path = "src/bin/therapeutic_research.rs"

[[bin]]
name = "eval-therapeutic"
path = "src/bin/eval_therapeutic.rs"

[[bin]]
name = "real-estate-research"
path = "src/bin/real_estate_research.rs"

[[bin]]
name = "knowledge-research"
path = "src/bin/knowledge_research.rs"

[[bin]]
name = "scalping-research"
path = "src/bin/scalping_research.rs"

[[bin]]
name = "calm-parent-research"
path = "src/bin/calm_parent_research.rs"

[[bin]]
name = "todo-research"
path = "src/bin/todo_research.rs"

[[bin]]
name = "todo-sdd"
path = "src/bin/todo_sdd.rs"

[[bin]]
name = "eval-characteristic"
path = "src/bin/eval_characteristic.rs"

[[bin]]
name = "characteristic-research"
path = "src/bin/characteristic_research.rs"

[[bin]]
name = "bear-market-trading"
path = "src/bin/bear_market_trading.rs"

[[bin]]
name = "qwen-investigate"
path = "src/bin/qwen_investigate.rs"

[[bin]]
name = "paper-discovery"
path = "src/bin/paper_discovery.rs"
required-features = ["local-vector"]

[[bin]]
name = "scrapus-research"
path = "src/bin/scrapus_research.rs"

[[bin]]
name = "last-week"
path = "src/bin/last_week.rs"

[[bin]]
name = "harness-design-research"
path = "src/bin/harness_design_research.rs"

[[bin]]
name = "kv-quant-research"
path = "src/bin/kv_quant_research.rs"

[[bin]]
name = "protocol-research"
path = "src/bin/protocol_research.rs"
required-features = ["neon"]

[[bin]]
name = "hair-papers"
path = "src/bin/hair_papers.rs"
required-features = ["neon"]
