[package]
name = "sdd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Spec-Driven Development pipeline — runtime-agnostic core library"

[dependencies]
deepseek   = { workspace = true, features = ["reqwest-client"] }
qwen       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
futures    = { workspace = true }
async-trait = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
