[package]
name = "travel-ml"
version = "0.1.0"
edition = "2021"
description = "Hotel semantic search: Candle embeddings + LanceDB vector store"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { version = "0.3" }
reqwest    = { workspace = true }
scraper    = { workspace = true }
clap       = { workspace = true }
futures    = { workspace = true }
regex      = { workspace = true }

# Candle ML — pinned at 0.9, workspace upgrade in Phase 2
candle-core         = "0.9"
candle-nn           = "0.9"
candle-transformers = "0.9"
hf-hub     = { workspace = true }
tokenizers = { workspace = true }

# LanceDB + Arrow
lancedb      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
arrow        = "57"

# DeepSeek (fallback only — gated behind feature)
[dependencies.deepseek]
workspace = true
features = ["reqwest-client"]
optional = true

[features]
default = []
deepseek-fallback = ["deepseek"]

[[bin]]
name = "travel-ingest"
path = "src/bin/ingest.rs"

[[bin]]
name = "travel-search"
path = "src/bin/search.rs"

[[bin]]
name = "travel-discover"
path = "src/bin/discover.rs"

[[bin]]
name = "travel-ischia"
path = "src/bin/ischia.rs"
