[package]
name = "tts"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for Qwen TTS via Alibaba DashScope API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
futures = "0.3"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
