[package]
name = "tts"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for Qwen TTS via Alibaba DashScope API"
license = "MIT"

[features]
default = []
r2 = ["dep:rust-s3"]

[dependencies]
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
base64     = { workspace = true }
futures    = { workspace = true }
tokio      = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
dotenvy    = { workspace = true }
regex      = { workspace = true }
rust-s3    = { version = "0.35", optional = true, default-features = false, features = ["tokio-rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }

[[bin]]
name = "interview_prep"

[[bin]]
name = "blog_tts"

[[bin]]
name = "eval_harness"

[[bin]]
name = "knowledge_tts"
