[project]
name = "research-client"
version = "0.1.0"
description = "Academic paper search clients — OpenAlex, Crossref, Semantic Scholar with fallback, normalization, embeddings, and reranking"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
