[project]
name = "research-client"
version = "0.2.0"
description = "Academic paper search clients — OpenAlex, Crossref, Semantic Scholar, arXiv, PubMed, Europe PMC, bioRxiv with fallback + union fan-out, normalization, embeddings, and reranking"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
