[project]
name = "agentic-healthcare-chat"
version = "0.2.0"
description = "LlamaIndex + DeepSeek RAG chat server for blood marker intelligence"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=2.0.0",
    "fastapi>=0.110.0",
    "llama-index>=0.12.0",
    "llama-index-llms-openai-like>=0.3.0",
    "llama-index-embeddings-fastembed>=0.3.0",
    "llama-index-readers-file>=0.4.0",
    "fastembed>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ragas>=0.2.0",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.35.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "unstructured[pdf]>=0.16.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
