[project]
name = "bricks-agent"
version = "0.1.0"
description = "LEGO YouTube video analyzer — extracts parts lists and building instructions"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=1.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bricks_agent*"]

[dependency-groups]
dev = ["langgraph-cli[inmem]>=0.4.14", "pytest>=8.0", "pytest-asyncio>=0.23", "deepeval>=2.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
